[tool.poetry]
name = "atcoder"
version = "0.1.0"
description = ""
authors = ["Hayato Fujita <hayatoto0702@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
atcoder-tools = "^2.13.0"
markupsafe = "~2.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
